# gpn-gwas-finemap

./: .gitignore  README.md  main.py  pyproject.toml
configs/: default-EAS-entropy.yaml  default-EAS-entropy_raw.yaml  default-EAS.yaml  default-EUR-entropy.yaml  default-EUR-entropy_raw.yaml  default-EUR.yaml  default.yaml  loci_demo.tsv  loci_shared_EUR_EAS.tsv
configs/datasets/: AFA.yaml  EAS.yaml  EUR.yaml  HIS.yaml  SAS.yaml  _plink_template.yaml  afr_plink_template.yaml  datasets.tsv  eur_t2d.yaml
scripts/: compare_finemap_priormodes.py  compare_high_pip_thresholds.py  compare_priors_all_datasets.sh  find_shared_loci.py  run_all_datasets.sh  run_dataset.sh  setup_environment.sh
scripts/compare_runs/: README.md  compare_pip.py
scripts/compute_ld/: README.md  extract_loci_plink.sh  prepare_unrelated_reference.sh
src/gpn_finemap/: __init__.py  cli.py  conservation.py  entropy.py  fine_mapping.py  finngen.py  harmonize.py  log.py  metrics.py  priors.py  report.py
src/polyfun_gpn/: __init__.py  cli.py  config.py  coords.py
src/polyfun_gpn/entropy/: background.py  lookup.py  priors.py
src/polyfun_gpn/gwas/: io.py
src/polyfun_gpn/loci/: demo.py  select.py
src/polyfun_gpn/pipeline/: aggregate.py  prepare_locus.py  run_finemap.py
tests/: test_config_datasets.py  test_config_gwas.py  test_config_ld.py  test_coords.py  test_gwas_io.py  test_loci.py  test_priors.py  test_shared_loci.py
