[project]
name = "polyfun-gpn"
version = "0.1.0"
description = "PolyFun + FINEMAP fine-mapping with entropy-derived per-SNP priors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "polars>=1.20",
    "pyarrow>=15",
    "pandas>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyliftover>=0.4",
    # PolyFun's own runtime requirements (we shell out to their finemapper.py).
    "scikit-learn>=1.3",
    "bitarray>=2.9",
    "pandas-plink>=2.2",
    "networkx>=3.2",
    # PolyFun uses pkg_resources, which setuptools 80+ no longer ships.
    "setuptools>=70,<80",
]

[project.scripts]
polyfun-gpn = "polyfun_gpn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyfun_gpn"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["external", ".uv-cache", "data", "output"]
